# oj-libjdwp

./: .gitignore  CMakeLists.txt
.github/workflows/: ci.yml
make/cmake/: java.cmake  libiconv.cmake
src/share/back/: debugInit.c  error_messages.c  vmDebug.c
src/share/npt/: npt.h  utf.c
src/share/transport/socket/: socketTransport.c
src/solaris/back/: linker_md.c
src/solaris/npt/: npt_md.h
